# PUNCpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst  create.cpp  create.h  demo_injector.cpp  demo_object.cpp  demo_poisson.cpp  plot.py  run.sh
demo/Circuit/: CMakeLists.txt  circuit.cpp  makefile  mesh.geo
demo/boris/: .gitignore  CMakeLists.txt  boris.cpp  makefile  particle.py  run.sh
demo/capacitance/: .gitignore  CMakeLists.txt  capacitance.cpp  run.sh  sphere_in_sphere.geo
demo/circuit/: .gitignore  circuit.cpp  run.sh
demo/convergence/: .gitignore  CMakeLists.txt  convergence.cpp  plot.py  run.sh
demo/injection/: .gitignore  CMakeLists.txt  empty_cube.geo  hist.py  injection.cpp  load.py  makefile  particleNumber.py  run.sh
demo/laframboise/: .gitignore  CMakeLists.txt  CMakeLists.txt.sm  laframboise.cpp  laframboise.ini  newplot.py  plot.py  run.sh
demo/langmuir/: .gitignore  CMakeLists.txt  langmuir.cpp  makefile  nothing_in_square.geo  plot.py  run.sh
demo/punc++/: .gitignore  interaction  punc++.geo  punc++.ini  punc++.old.ini
demo/varobject/: varobject.cpp
deprecated/: CMakeLists.txt  install.sh
deprecated/demo/Laframboise/: CMakeLists.txt  a.out  laframboise.cpp  run.sh  test  units.cpp
deprecated/demo/capacitance/: CMakeLists.txt  OLDCMakeLists.txt  capacitance.cpp
deprecated/demo/convergence/: CMakeLists.txt  OLDCMakeLists.txt  convergence.cpp  run.sh
deprecated/demo/injection/: CMakeLists.txt  injection.cpp  run.sh
deprecated/demo/laframboise/: CMakeLists.txt
deprecated/demo/langmuir/: CMakeLists.txt  CMakeLists.txt.Old  langmuir.cpp  run.sh
deprecated/demo/varobject/: CMakeLists.txt  run.sh  varobject.cpp
deprecated/demo/varobject_old/: CMakeLists.txt  OLDCMakeLists.txt
deprecated/punc/: .gitignore  CMakeLists.txt.old  ErrorNorm1D.ufl  ErrorNorm2D.ufl  ErrorNorm3D.ufl  Surface.ufl  VarPotential1D.ufl  compileUFL.sh  diagnostics.cpp  diagnostics.h  distributor.cpp  distributor.h  injector.cpp  injector.h  object.cpp  object.h  poisson.cpp  poisson.h  population.cpp  population.h  punc.h  pusher.cpp  pusher.h
deprecated/runs/10R_25V/: paper.ini
deprecated/runs/10R_25V_6reso/: paper.ini
deprecated/runs/10R_25V_6reso_resi/: newplot.py  paper.ini  runtime.txt
deprecated/runs/1R_25V/: paper.ini
deprecated/runs/Cylinder/: interaction  newplot.py
deprecated/runs/Cylinder/geo/: R1.geo
docs/: Makefile
docs/source/: conf.py  index.rst  installation.rst  tutorial_accuracy.rst
dust/: CMakeLists.txt  dust.cpp  grain.ini  run.sh
envs/: punc.yml  punc_exact.yml
interaction/: CMakeLists.txt  build.sh  interaction.cpp  io.cpp  io.h  laframboise.ini  newplot.py  params.py  parser.h  run.sh
interaction/deprecated/: benchmark.txt  laframboise_normalized_and_si.cpp
mesh/: circle.xml  circle1.xml  circle2.xml  circle3.xml  circle4.xml  circuit.xml
punc/: CMakeLists.txt  CMakeLists.txt.sm  EField.ufl  Error.ufl  Errorv2.ufl  Flux.ufl  Potential.ufl  build.sh  capacitance.cpp  capacitance.h  doc.sh  injector.cpp  injector.h  install.sh  object.cpp  object.h  poisson.cpp  poisson.h  population.cpp  population.h
punc/doc/: Doxyfile.in
punc/include/: diagnostics.h  distributor.h  injector.h  object.h  poisson.h  population.h  punc.h  pusher.h
punc/include/punc/: diagnostics.h  distributions.h  distributor.h  efield.h  injector.h  mesh.h  object.h  object_BC.h  object_CM.h  poisson.h  population.h  pusher.h
punc/include/ufl/: Clement2D.ufl  EField2D.ufl  EFieldDG01D.ufl  ErrorNormVec1D.ufl  ErrorNormVec2D.ufl  ErrorNormVec3D.ufl  Flux.ufl  Mean3D.ufl  Potential2D.ufl  Potential3D.ufl  PotentialDG1D.ufl  Surface.ufl  Volume.ufl
punc/src/: diagnostics.cpp  distributions.cpp  distributor.cpp  efield.cpp  injector.cpp  mesh.cpp  object.cpp  object_BC.cpp  object_CM.cpp  poisson.cpp  population.cpp  pusher.cpp  pusher.txt
punc/ufl/: Charge.ufl  Constraint.ufl  EField1D.ufl  Energy.ufl  ErrorNorm1D.ufl  ErrorNorm2D.ufl  ErrorNorm3D.ufl  ErrorNormVec1D.ufl  ErrorNormVec2D.ufl  ErrorNormVec3D.ufl  Flux.ufl  Mean2D.ufl  Number.ufl  Potential1D.ufl  Potential2D.ufl  Potential3D.ufl  PotentialDG1D.ufl  PotentialDG2D.ufl  PotentialDG3D.ufl  VarPotential1D.ufl  VarPotential2D.ufl  VarPotential3D.ufl  Volume.ufl  WeightedVolume.ufl  compileUFL.sh  makefile
runs/10R_25V/: paper.ini
runs/10R_25V_6reso_ro/: paper.ini
runs/1R_25V/: paper.ini
runs/3R_25V/: paper.ini  params.py
runs/Cylinder/: R1.ini
sandbox/Clement/: CMakeLists.txt  Clement1D.h  Clement1D.ufl  Clement2D.h  Clement3D.h  Clement3D.ufl  EFieldDG01D.h  EFieldDG02D.h  EFieldDG02D.ufl  EFieldDG03D.h  EFieldDG03D.ufl  Mean1D.h  Mean1D.ufl  Mean2D.h  Mean3D.h  clement.cpp  run.sh  test.py
sandbox/MultiDim/: CMakeLists.txt  EField.ufl  EField1D.ufl  EField2D.ufl  EField3D.ufl  Energy.ufl  Energy1D.ufl  Energy2D.ufl  Energy3D.ufl  ErrorNorm.ufl  ErrorNorm1D.ufl  ErrorNorm2D.ufl  ErrorNorm3D.ufl  Flux1D.ufl  Flux2D.ufl  Flux3D.ufl  Potential.ufl  Potential2D.ufl  Surface2D.ufl  Surface3D.ufl  Volume1D.ufl  Volume2D.ufl  Volume3D.ufl  run.sh  test.cpp  test2.cpp
sandbox/Timer/: .gitignore  timer.cpp
sandbox/accelerator/: .gitignore  CMakeLists.txt  EField3D.ufl  accelerator.cpp  particle.py  run.sh
sandbox/basis/: CMakeLists.txt  basis.cpp  run.sh
sandbox/fields/: load.py  prototype.cpp  test.cpp
sandbox/flux/: CMakeLists.txt  fluxes.cpp  run.sh
sandbox/injection_v0/: CMakeLists.txt  eigentest.cpp  finalversion.cpp  finalversion1D.cpp  load.py  ors.py  prototype.cpp  py_ors.py  run.sh  test  test.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  version1.cpp
sandbox/injection_v1/: CMakeLists.txt  injection.cpp  load.py
sandbox/injection_v2/: injection.cpp  load.py  run.sh
sandbox/parallel/: CMakeLists.txt  plot.py  run.sh  test.cpp
sandbox/punc/: CMakeLists.txt  plot.py  punc.cpp  run.sh
sandbox/struct/: test  test.cpp
sandbox/varobjects/: Charge.ufl  LagrangeMultiplier.ufl  VarPotential2D.ufl  run.sh  varobj.cpp
test/: .gitignore  makefile  sphere.geo  test.ini  test.py  test.sh
tutorials/basic/: cylinder.geo  interaction  params.py  (+1 more)
(+1 files in other folders)
